# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.628 2006/03/24 18:58:11 agaffney Exp $

  24 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  set disklabel to default for arch when clearing the partition table
  src/templates/x86ArchitectureTemplate.py:
  complete rewrite of first and second passes

  22 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py, src/templates/x86ArchitectureTemplate.py:
  allow iterating over Device object to get partitions

  21 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  allow access to Device object like a dict

  20 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  allow access to Partition object like a dict

  16 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  fail if any filesystems are mounted on the device being partitioned

  14 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  reorder minor numbers when loading partitions from disk to match the physical
  partition order

  13 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  overhaul for supporting mac disklabels and partitions out of disk order
  remove free space from inside extended partition when extended is removed

  13 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> +bin/installer,
  +bin/installer-dialog, +bin/installer-gtk, +docs/gli.png,
  +docs/gli-dialog.png, +src/misc/installer-dialog.desktop,
  +src/misc/installer-faq.desktop, +src/misc/installer-gtk.desktop:
  Added bash scripts, icons, and desktop entries from the ebuild to make my
  life easier.

  10 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  raise an exception if the existing partitions are out of disk order