@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.628 2006/03/24 18:58:11 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.629 2006/03/25 20:41:10 agaffney Exp $
+
+  25 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  continue breakup/cleanup of partitioning code
 
   24 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
